<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_edit_pwd_title">修改密碼</string>
    <string name="account_login_fail">登錄失敗</string>
    <string name="account_login_input_account">請輸入帳號</string>
    <string name="account_login_input_pwd">請輸入密碼</string>
    <string name="account_login_success">登錄成功</string>
    <string name="account_login_tips">請稍候,馬上就好啦～</string>
    <string name="account_login_title">登錄</string>
    <string name="account_register_title">註冊</string>
    <string name="account_show_pwd_title">帳密查看</string>
    <string name="aiqu_nav_tab_collection_title">分类</string>
    <string name="aiqu_nav_tab_hot_title">推荐</string>
    <string name="aiqu_nav_tab_index_title">首页</string>
    <string name="android_auto_update_download_progress">正在下載:%1$d%%</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">黃品匯</string>
    <string name="app_update_auto_install_download_fail">自動下載失敗，點擊更新</string>
    <string name="app_update_install_fail">安裝失敗</string>
    <string name="app_update_install_now">立即安裝</string>
    <string name="app_update_late">暫不更新</string>
    <string name="app_update_now">立即更新</string>
    <string name="app_update_title">發現新版本V%s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="avin_nav_tab_actor">女优</string>
    <string name="banner_adapter_null_error">Adapter为空！请检查下参数</string>
    <string name="bind_invite_code">綁定邀請碼</string>
    <string name="bind_invite_code_fail">邀請碼綁定失敗,請稍後重試</string>
    <string name="bind_invite_code_tip1">請輸入邀請碼</string>
    <string name="bl_nav_tab_index_title">首页</string>
    <string name="bl_nav_tab_tuijian_title">榜单</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="cancle_text">取消</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charge_by_code">兌換碼兌換</string>
    <string name="charge_capture_order_num">請截屏保存訂單號</string>
    <string name="charge_channel_ali">支付寶渠道</string>
    <string name="charge_channel_wechat">微信渠道</string>
    <string name="charge_choose_pay_way">請選擇支付渠道</string>
    <string name="charge_choose_pay_way_title">請選擇支付渠道</string>
    <string name="charge_choose_vip_type">請選擇 VIP 類型</string>
    <string name="charge_complete">已完成支付</string>
    <string name="charge_make_order_failed_retry_tip">訂單創建失敗，請重試</string>
    <string name="charge_make_order_failed_title">訂單創建失敗</string>
    <string name="charge_makeing_order">訂單創建中請稍後</string>
    <string name="charge_order_info">"感謝您的支持，
請在訂單有效期內付款。
充值一般在 1–3 分鐘內生效，
如充值不到賬，請聯系客服處理，
請截屏保存當前訂單號

%s"</string>
    <string name="charge_order_pay_complete_title">訂單支付完成</string>
    <string name="charge_order_querying">訂單支付狀態查詢中</string>
    <string name="charge_original_price">原價 ¥</string>
    <string name="charge_pay_way_tips">"每日支付渠道充值額度庫存有限
充值失敗時請嘗試其他支付渠道或稍後重試
感謝您的支持"</string>
    <string name="charge_query_fail_title">訂單支付狀態查詢失敗</string>
    <string name="charge_query_order_fail">"感謝您的支持，
未查詢到您的付款信息。
充值一般在 1–3 分鐘內生效，
如充值仍不到賬，請聯系客服處理，
請截屏保存當前訂單號

%s"</string>
    <string name="charge_thank_for_order">感謝您的支持</string>
    <string name="charge_vip_title">開通會員</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_app_tip">在按一次退出程序</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copy">复制</string>
    <string name="cover">滑盖</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="current_set_number" formatted="false">%s %d / %d</string>
    <string name="default_confirm_pay_item_content">請選擇 VIP 類型</string>
    <string name="define_roundedimageview" />
    <string name="dialog_new_nikename">請輸激活碼</string>
    <string name="dialog_ok">確認</string>
    <string name="dkplayer_continue_play">继续播放</string>
    <string name="dkplayer_error_message">出了点小问题，请稍后重试</string>
    <string name="dkplayer_lock_tip">请先解锁屏幕！</string>
    <string name="dkplayer_locked">已锁定</string>
    <string name="dkplayer_replay">重新播放</string>
    <string name="dkplayer_retry">重 试</string>
    <string name="dkplayer_unlocked">已解锁</string>
    <string name="dkplayer_wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_playback_speed_normal">Normal</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fg_home_title">精选</string>
    <string name="fg_styles_title">分类</string>
    <string name="first_chapter">第一章</string>
    <string name="first_tab_title">精選</string>
    <string name="font">字体</string>
    <string name="fourth_tab_title">個人中心</string>
    <string name="global_search_home_hint">誰用誰知道</string>
    <string name="global_search_home_title">全網最全搜索引擎</string>
    <string name="global_search_init_fail">全網搜索初始化失敗</string>
    <string name="global_search_start_init">全網搜索引擎初始化中</string>
    <string name="global_search_title">全網聚合搜索</string>
    <string name="self_dashboard_menu_charge">充值</string>
    <string name="self_dashboard_menu_guan_wang">永久地址</string>
    <string name="self_dashboard_menu_ke_fu">聯繫客服</string>
</resources>