<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/v5_common_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/navigation_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/navigation_bar" />
    <com.youth.banner.Banner android:id="@id/vip_types" android:layout_width="0.0dip" android:layout_height="0.0dip" app:banner_auto_loop="false" app:banner_indicator_normal_color="@android:color/white" app:banner_indicator_selected_color="@color/colorPrimary" app:banner_infinite_loop="false" app:layout_constraintDimensionRatio="w,2:5" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/navigation_bar" />
    <TextView android:textSize="12.0dip" android:textColor="@color/self_color_7A7C83" android:id="@id/charge_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:text="@string/charge_pay_way_tips" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/vip_types" app:layout_goneMarginLeft="16.0dip" />
    <TextView android:textSize="24.0dip" android:textStyle="bold" android:textColor="@color/v5_global_search_app_bar_menu" android:id="@id/charge_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:text="@string/charge_choose_pay_way_title" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/charge_tips" app:layout_goneMarginLeft="16.0dip" />
    <View android:id="@id/pay_choose_container_bg" android:background="@drawable/self_round_bg_212121" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_margin="16.0dip" app:layout_constraintBottom_toTopOf="@id/bottom_dummy" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/charge_title" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/pay_ways" android:scrollbars="none" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginBottom="20.0dip" android:layout_marginHorizontal="6.0dip" app:layout_constraintBottom_toTopOf="@id/current_selected_pay_item_btn" app:layout_constraintLeft_toLeftOf="@id/pay_choose_container_bg" app:layout_constraintRight_toRightOf="@id/pay_choose_container_bg" app:layout_constraintTop_toTopOf="@id/pay_choose_container_bg" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/current_selected_pay_item_btn" android:background="@drawable/recharge_submit_btn_v2" android:layout_width="0.0dip" android:layout_height="36.0dip" android:layout_marginBottom="20.0dip" android:text="@string/default_confirm_pay_item_content" android:layout_marginHorizontal="12.0dip" app:layout_constraintBottom_toBottomOf="@id/pay_choose_container_bg" app:layout_constraintLeft_toLeftOf="@id/pay_choose_container_bg" app:layout_constraintRight_toRightOf="@id/pay_choose_container_bg" />
    <View android:id="@id/bottom_dummy" android:layout_width="1.0dip" android:layout_height="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>