<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/v5_common_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:background="@color/v5_common_background" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="@id/vipStatusView" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="24.0dip" android:textColor="@color/v5_dashboard_login_txt" android:id="@id/uiSelfDashboardLoginState" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:layout_marginTop="46.0dip" android:text="登录" app:layout_constraintBottom_toTopOf="@id/change_login_account" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="12.0dip" android:textStyle="bold" android:textColor="@color/v5_dashboard_login_txt" android:id="@id/uiSelfDashboardBusiness" android:background="@drawable/self_dashboard_business_bg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="46.0dip" android:layout_marginRight="22.0dip" android:text="  商務合作 >> " android:drawableLeft="@drawable/icon_self_dashboard_bussiness_left" android:paddingHorizontal="10.0dip" android:paddingVertical="4.0dip" app:layout_constraintBottom_toTopOf="@id/change_login_account" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="12.0dip" android:textColor="@color/self_color_D61835" android:gravity="center" android:id="@id/change_login_account" android:background="@drawable/self_round_bg_ffe6b6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="账号切换" android:paddingHorizontal="10.0dip" android:paddingVertical="4.0dip" app:layout_constraintBottom_toBottomOf="@id/uiSelfDashboardLoginState" app:layout_constraintLeft_toRightOf="@id/uiSelfDashboardLoginState" app:layout_constraintTop_toTopOf="@id/uiSelfDashboardLoginState" />
    <com.theway.abc.v2.main.view.VipStatusView android:id="@id/vipStatusView" android:background="@drawable/vip_status_bg" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_marginTop="27.0dip" android:layout_marginHorizontal="24.0dip" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/uiSelfDashboardLoginState" />
    <View android:id="@id/pay_choose_container_bg" android:background="@drawable/self_round_bg_212121" android:layout_width="0.0dip" android:layout_height="310.0dip" android:layout_marginHorizontal="16.0dip" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/vipStatusView" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recharge_items" android:scrollbars="none" android:layout_width="0.0dip" android:layout_height="262.0dip" app:layout_constraintLeft_toLeftOf="@id/pay_choose_container_bg" app:layout_constraintRight_toRightOf="@id/pay_choose_container_bg" app:layout_constraintTop_toTopOf="@id/pay_choose_container_bg" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/self_color_000000" android:gravity="center" android:id="@id/current_selected_pay_item_btn" android:background="@drawable/recharge_submit_btn" android:layout_width="0.0dip" android:layout_height="36.0dip" android:text="@string/default_confirm_pay_item_content" android:layout_marginHorizontal="12.0dip" app:layout_constraintLeft_toLeftOf="@id/pay_choose_container_bg" app:layout_constraintRight_toRightOf="@id/pay_choose_container_bg" app:layout_constraintTop_toBottomOf="@id/recharge_items" />
    <androidx.constraintlayout.widget.Group android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="pay_choose_container_bg,recharge_items,current_selected_pay_item_btn" />
    <View android:id="@id/menuContainer" android:background="@drawable/self_round_bg_212121" android:layout_width="0.0dip" android:layout_height="90.0dip" android:layout_margin="16.0dip" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/pay_choose_container_bg" />
    <com.theway.abc.v2.main.view.Menu android:id="@id/selfChargeBtn" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" app:icon="@drawable/icon_self_charge" app:layout_constraintBottom_toBottomOf="@id/menuContainer" app:layout_constraintLeft_toLeftOf="@id/menuContainer" app:layout_constraintRight_toLeftOf="@id/selfMenuGuanWang" app:layout_constraintTop_toTopOf="@id/menuContainer" app:title="@string/self_dashboard_menu_charge" />
    <com.theway.abc.v2.main.view.Menu android:id="@id/selfMenuGuanWang" android:layout_width="0.0dip" android:layout_height="wrap_content" app:icon="@drawable/icon_self_guan_wang" app:layout_constraintBottom_toBottomOf="@id/selfChargeBtn" app:layout_constraintLeft_toRightOf="@id/selfChargeBtn" app:layout_constraintRight_toLeftOf="@id/selfContactKeFu" app:layout_constraintTop_toTopOf="@id/selfChargeBtn" app:title="@string/self_dashboard_menu_guan_wang" />
    <com.theway.abc.v2.main.view.Menu android:id="@id/selfContactKeFu" android:layout_width="0.0dip" android:layout_height="wrap_content" app:icon="@drawable/icon_self_kefu" app:layout_constraintBottom_toBottomOf="@id/selfChargeBtn" app:layout_constraintLeft_toRightOf="@id/selfMenuGuanWang" app:layout_constraintRight_toLeftOf="@id/selfChangePassword" app:layout_constraintTop_toTopOf="@id/selfChargeBtn" app:title="@string/self_dashboard_menu_ke_fu" />
    <com.theway.abc.v2.main.view.Menu android:id="@id/selfChangePassword" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" app:icon="@drawable/icon_self_change_password" app:layout_constraintBottom_toBottomOf="@id/selfChargeBtn" app:layout_constraintLeft_toRightOf="@id/selfContactKeFu" app:layout_constraintRight_toRightOf="@id/menuContainer" app:layout_constraintTop_toTopOf="@id/selfChargeBtn" app:title="修改密码" />
    <com.youth.banner.Banner android:id="@id/adContainer" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_margin="16.0dip" app:banner_indicator_normal_color="@android:color/white" app:banner_indicator_selected_color="@color/colorPrimary" app:banner_radius="@dimen/self_bg_round_corner_radius" app:layout_constraintDimensionRatio="w,1:3" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/menuContainer" />
    <TextView android:textSize="12.0dip" android:textColor="@color/self_color_AEAEAE" android:gravity="center" android:id="@id/version_info" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>